# proteosim

./: README.md  ms_experiment_final.ipynb  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: dummy-proteins.fasta
proteosim/: __init__.py  file_handling.py  liquid_chromatography.py  mass_spectra_simulation.py  protein_digestion.py
proteosim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_file_handling.py  test_liquid_chromatography.py  test_mass_spectra_simulation.py  test_protein_digestion.py
